--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -110,7 +110,10 @@ description: An overview of Redux, how to download and use, and how to just get 
         ├── barebones-config.php</code>
     ├── tests/
     </pre>
-    <p>Be warned that if you attempt to embed the entire Redux repo inside a theme or plugin it will not pass approval for many marketplaces including WordPress.org and ThemeForest.</p>
+    <div class="bs-callout bs-callout-warning">
+        <h4>Embedding the Redux repo will not pass approval</h4>
+        <p>Be warned that if you attempt to embed the entire Redux repo inside a theme or plugin it will not pass approval for many marketplaces including WordPress.org and ThemeForest.</p>
+    </div>
 </section>
 
 <section class="bs-docs-section">
